# Nomad

./: .gitignore  LICENSE  README.md
Hardware/Actuator/NomadBLDC/Drivers/PyNomad/: CMakeLists.txt
Notebooks/: Casadi Wrapper-V2.ipynb  (+2 more)
Software/: .gitignore  .gitignore.swp  CMakeLists.txt  PREEMPT_RT_UP_XTreme.md  README.md  TODO.md  Ubuntu_20.04_UP_XTreme.md  rbdl_test.csv
Software/Common/: CMakeLists.txt
Software/Common/include/Common/: FiniteStateMachine.hpp  State.hpp  Time-impl.hpp  Time.hpp  TransitionEvent.hpp
Software/Common/include/Common/Math/: CubicPolynomialTrajectory.hpp  MathUtils.hpp  Statistics.hpp
Software/Common/src/: FiniteStateMachine.cpp  State.cpp  Time.cpp  TransitionEvent.cpp
Software/Common/src/Math/: CubicPolynomialTrajectory.cpp  MathUtils.cpp
Software/Common/test/: CMakeLists.txt  fsm_test.cpp
Software/Communications/: CMakeLists.txt  TODO.md
Software/Communications/include/Communications/: Port-impl.hpp  Port.hpp
Software/Communications/include/Communications/Messages/: .double_vec_t.zcm.swp  com_state_t.hpp  com_state_t.zcm  double_vec_t.hpp  generic_msg_t.hpp  generic_msg_t.zcm  generic_vec_t.hpp  int32_vec_t.hpp  int32_vec_t.zcm  joint_control_cmd_t.zcm  joint_state_t.hpp  joint_state_t.zcm  msg_helpers.hpp  msg_t.c  msg_t.h  msg_t.hpp  msg_t.zcm  sim_data_t.hpp  sim_data_t.zcm  teleop_data_t.hpp
Software/Communications/src/: Port.cpp
Software/Communications/test/: CMakeLists.txt  thread_test.cpp  zcm_hello_world.cpp  zmq_pub_server.cpp  zmq_pub_sub_thread.cpp  zmq_sub_client.cpp
Software/Config/: robot-config.yaml
Software/Core/Controllers/: CMakeLists.txt  README.md
Software/Core/Controllers/include/Controllers/: BlockDiagram.hpp  ConvexMPC.hpp  GaitScheduler.hpp  LegController.hpp  Messages.hpp  NomadTypes.hpp  PrimaryControl.hpp  RealTimeTask.hpp  ReferenceTrajectoryGen.hpp  StateEstimator.hpp  SystemBlock.hpp
Software/Core/Controllers/src/: BlockDiagram.cpp  ConvexMPC.cpp  GaitScheduler.cpp  LegController.cpp  PrimaryControl.cpp  RealTimeTask.cpp  ReferenceTrajectoryGen.cpp  StateEstimator.cpp  SystemBlock.cpp
Software/Core/Controllers/test/: CMakeLists.txt  diagram_test.cpp  leg_controller_test.cpp  qp_solver_test  qp_solver_test.cpp  task_node_test.cpp  teleop_test.cpp  thread_test.cpp  zero_mq_test.cpp
Software/Core/Controllers/tests/: CMakeLists.txt  qp_solver_test.cpp  thread_test.cpp
Software/Core/Nomad/: CMakeLists.txt
Software/Core/Nomad/include/Nomad/: Nomad.hpp
Software/Core/Nomad/src/: Nomad.cpp
Software/Core/OptimalControl/: CMakeLists.txt
Software/Core/OptimalControl/src/: ControlsLibrary.cpp  ConvexMatrixEquationSolverQP.cpp  LinearCondensedOCP.cpp  LinearSparseOCP.cpp  OptimalControlProblem.cpp  RealTimeTask.cpp
Software/Core/Physics/test/: CMakeLists.txt  dart_test.cpp  rbdl_test.cpp
Software/Core/Plotting/: CMakeLists.txt
Software/Core/Plotting/plotty/: CMakeLists.txt
Software/Core/Systems/: CMakeLists.txt
Software/Core/Systems/src/: BlockDiagram.cpp  DynamicalSystem.cpp  NomadPlant.cpp  RigidBody.cpp  SystemBlock.cpp  Time.cpp
Software/Core/Systems/test/: CMakeLists.txt  diagram_test.cpp  dynamical_system_test.cpp
Software/Documentation/: PCAN_Linux_Setup.md
Software/OperatorInterface/: CMakeLists.txt
Software/OperatorInterface/include/OperatorInterface/: GamepadInterface.hpp  RemoteTeleop.hpp
Software/OperatorInterface/src/: GamepadInterface.cpp  RemoteTeleop.cpp
Software/OperatorInterface/src/GamepadTeleopFSM/: GamepadTeleopFSM.cpp
Software/Plotting/: CMakeLists.txt
Software/Plotting/include/Plotting/: PlotterTaskNode.hpp  matplotlibcpp.h
Software/Plotting/src/: PlotterTaskNode.cpp
Software/Plotting/test/: CMakeLists.txt  plot_test.cpp
Software/Realtime/: CMakeLists.txt  README.md
Software/Realtime/include/Realtime/: Port-impl.hpp  Port.hpp  RealTimeTask.hpp
Software/Realtime/src/: Port.cpp  RealTimeTask.cpp
Software/Resource/LegTest/: .Leg.urdf.swp  Leg.urdf
Software/Resource/LegTest/meshes/: Foot1.stl  HFE_Actuator1.stl  KFE_Actuaor1.stl  Lower_Leg1.stl  Slider_Plate1_1.stl  Upper_Leg1.stl  base_link.stl
Software/Resource/Robot/: Nomad.urdf  graph.txt
Software/Resource/Robot/meshes/: b_foot_FL.stl  b_haa_motor_FL.stl  b_haa_motor_FR.stl  b_haa_motor_RR.stl  b_hfe_motor_FL.stl  b_hfe_motor_RL.stl  b_hfe_motor_RR.stl  b_kfe_motor_FR.stl  b_kfe_motor_RL.stl  b_kfe_motor_RR.stl  b_lower_leg_FR.stl  b_lower_leg_RR.stl  b_upper_leg_FR.stl  b_upper_leg_RL.stl  base_link.stl
Software/Resource/Robot_V2/: NOMAD.urdf
Software/Resource/Robot_V2/meshes/: b_foot_FL1.stl  b_foot_FR1.stl  b_foot_RL1.stl  b_foot_RL2.stl  b_haa_motor_FL1.stl  b_haa_motor_FR1.stl  b_haa_motor_RL1.stl  b_haa_motor_RR1.stl  b_hfe_motor_FL1.stl  b_hfe_motor_FR1.stl  b_hfe_motor_RL1.stl  b_hfe_motor_RR1.stl  b_kfe_motor_FL1.stl  b_kfe_motor_FR1.stl  b_kfe_motor_RL1.stl  b_kfe_motor_RR1.stl  b_lower_leg_FL1.dae  b_lower_leg_FL1.stl  b_lower_leg_FR1.dae  b_lower_leg_FR1.stl  b_lower_leg_RL1.dae  b_lower_leg_RL1.stl  b_lower_leg_RR1.dae  b_lower_leg_RR1.stl  b_upper_leg_FL1.dae  b_upper_leg_FL1.stl  b_upper_leg_FR1.dae  b_upper_leg_FR1.stl  b_upper_leg_RL1.dae  b_upper_leg_RL1.stl  b_upper_leg_RR1.dae  b_upper_leg_RR1.stl  base_link.stl
Software/Robot/: CMakeLists.txt
Software/Robot/Nomad/src/: FusedLegKinematicsStateEstimator.cpp  IdleState.cpp  NomadControl.cpp  NomadControlFSM.cpp  NomadDynamics.cpp  NomadRobot.cpp  OffState.cpp  RigidBodyGRFSolverQP.cpp  SimulationInterface.cpp  StandController.cpp  StandState.cpp
Software/Robot/Nomad/test/: CMakeLists.txt  TaskRead.cpp  TaskRead.hpp  TaskWrite.cpp  TaskWrite.hpp  nomad_test.cpp  stand_test.cpp  thread_comm_test.cpp
Software/Simulation/: CMakeLists.txt  README.md
Software/Simulation/Dart/: CMakeLists.txt
Software/Simulation/Dart/include/: NomadRobot.h
Software/Simulation/Dart/src/: NomadRobot.cpp  main.cpp
Software/Simulation/Gazebo/: CMakeLists.txt
Software/Simulation/Gazebo/src/: nomad_model.cpp  nomad_world.cpp
Software/Simulation/Gazebo/worlds/: block_test.world  nomad.world  nomad_model_test.world
(+507 files in other folders)
